src/objects/SPH_Department__c.object
<CustomObject>
    <fields>
        <fullName>Department_Code__c</fullName>
        <externalId>true</externalId>
        <label>Department Code</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Department_Name__c</fullName>
        <label>Department Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Created_By__c</fullName>
        <label>Legacy Created By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Created_Date__c</fullName>
        <label>Legacy Created Date</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Updated_By__c</fullName>
        <label>Legacy Updated By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Updated_Date__c</fullName>
        <label>Legacy Updated Date</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPH_Email_Account__c</fullName>
        <label>SPH Email Account</label>
        <type>Email</type>
    </fields>
    <label>SPH Department</label>
    <nameField>
        <label>SPH Department Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SPH Departments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>